--- a/TextAnalysis/TextAnalysis.csproj
+++ b/TextAnalysis/TextAnalysis.csproj
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup>
+    <SSDTUnitTestPath Condition="'$(SSDTUnitTestPath)' == ''">$(VsInstallRoot)\Common7\IDE\Extensions\Microsoft\SQLDB</SSDTUnitTestPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SSDTPath Condition="'$(SSDTPath)' == ''">$(VsInstallRoot)\Common7\IDE\Extensions\Microsoft\SQLDB\DAC\130</SSDTPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -36,9 +45,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -48,25 +55,37 @@
     <Compile Include="Constants.cs" />
     <Compile Include="DataContentCleanUp.cs" />
     <Compile Include="Demo.cs" />
+    <Compile Include="Init.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EmbeddedResource Include="Data\PosNeg_model.h5" />
+    <EmbeddedResource Include="Data\PosNeg_Model.h5" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Python\JiebaWordBreak.py" />
-    <EmbeddedResource Include="Data\StandardTest.txt" />
+    <EmbeddedResource Include="Data\Similar.txt" />
     <EmbeddedResource Include="Python\Word2Vec.py" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Python\BuildModel.py" />
-    <Content Include="Python\DataPrepare.py" />
-    <Content Include="Python\Evaluate.py" />
-    <Content Include="Python\Predict.py" />
-    <Content Include="Python\RestoreModel.py" />
+    <EmbeddedResource Include="Python\BuildModel.py" />
+    <EmbeddedResource Include="Python\DataPrepare.py" />
+    <EmbeddedResource Include="Python\Evaluate.py" />
+    <EmbeddedResource Include="Python\Predict.py" />
+    <EmbeddedResource Include="Python\RestoreModel.py" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Data\dict.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Config.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <SsdtUnitTestVersion>3.1</SsdtUnitTestVersion>
+  </PropertyGroup>
+  <Import Project="$(SQLDBExtensionsRefPath)\Microsoft.Data.Tools.Schema.Sql.UnitTesting.targets" Condition="$(VisualStudioVersion) != '15.0' And '$(SQLDBExtensionsRefPath)' != ''" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\SSDT\Microsoft.Data.Tools.Schema.Sql.UnitTesting.targets" Condition="$(VisualStudioVersion) != '15.0' And '$(SQLDBExtensionsRefPath)' == ''" />
 </Project>
