--- a/TextAnalysis/TextAnalysis.csproj
+++ b/TextAnalysis/TextAnalysis.csproj
@@ -81,6 +81,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Config.xml" />
+    <Content Include="Data\Clf_Test.txt" />
+    <Content Include="Data\Sim_Test.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
