New data processing.

--- a/TextAnalysis/TextAnalysis.csproj
+++ b/TextAnalysis/TextAnalysis.csproj
@@ -53,9 +53,7 @@
     <Compile Include="Common.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="DataContentCleanUp.cs" />
-    <Compile Include="Demo.cs" />
-    <Compile Include="Init.cs" />
+    <Compile Include="DataClean.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
