--- a/TextAnalysis/TextAnalysis.csproj
+++ b/TextAnalysis/TextAnalysis.csproj
@@ -55,15 +55,18 @@
     <Compile Include="Constants.cs" />
     <Compile Include="DataClean.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="PrepareTestData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PrepareTrainData.cs" />
+    <Compile Include="TrainTextClassification.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <EmbeddedResource Include="Data\PosNeg_Model.h5" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Python\JiebaWordBreak.py" />
+    <EmbeddedResource Include="Python\Jieba.py" />
     <EmbeddedResource Include="Data\Similar.txt" />
     <EmbeddedResource Include="Python\Word2Vec.py" />
   </ItemGroup>
