--- a/TextAnalysis/TextAnalysis.csproj
+++ b/TextAnalysis/TextAnalysis.csproj
@@ -52,17 +52,23 @@
   <ItemGroup>
     <Compile Include="AddNonSupData.cs" />
     <Compile Include="AddSupData.cs" />
+    <Compile Include="CalcSimilarity.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="DataClean.cs" />
+    <Compile Include="EvaluateTextClassification.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="NewDataProcessing.cs" />
+    <Compile Include="PredictTextClassification.cs" />
     <Compile Include="PrepareTestData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PrepareTrainData.cs" />
+    <Compile Include="RunTextAnalysis.cs" />
+    <Compile Include="TextToDigit.cs" />
     <Compile Include="TrainTextClassification.cs" />
+    <Compile Include="TrainWord2Vec.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
